--- a/_config.yml
+++ b/_config.yml
@@ -31,10 +31,10 @@ discus-identifier: # Add your Disqus identifier
 # Important settings
 assets:
   sources:
-    - assets/fonts
-    - assets/img
-    - assets/js
-    - assets/stylesheets
+    - _assets/fonts
+    - _assets/img
+    - _assets/js
+    - _assets/stylesheets
 
 # Build settings
 exclude:
